[tool.poetry]
name = "ntmcrypt"
version = "0.1.0"
description = ""
authors = ["Vasily Perekhrest <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gmpy2 = "^2.0.8"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
