[metadata]
name = cryptopy
version = 0.1
description = Laboratory work on the number-theoretic method in cryptography.
long_description = file: README.md
author = Vasily Perekhrest
url = https://github.com/vasilyperekhrest/cryptopy

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    sympy
    gmpy2
